--- a/marketpage.html
+++ b/marketpage.html
@@ -60,18 +60,25 @@
           </ul>
         </nav>
 
-        <div class="hearder-search flex">
-          <input type="button" value="&#128269;" class="search_icon" />
-          <input type="text" class="search_bar" placeholder="검색" />
-        </div>
+        <div class="header-nav flex">
+          <div class="hearder-search">
+            <input type="button" value="&#128269;" class="search_icon" />
+            <input type="text" class="search_bar" placeholder="검색" />
+            <!-- 검색 아이콘 -->
+          </div>
 
-        <div class="header-chat flex">
-          <input type="button" value="&#9776;" class="menu_icon" />
-          <input type="button" value="채팅하기" class="chat_Btn" />
+          <div class="header-login">
+            <input type="button" value="&#9776;" class="menu_icon" />
+            <div class="login">
+              <a href="#">로그인</a>
+            </div>
+          </div>
         </div>
       </header>
     </div>
 
     <!-- main -->
+
+    <!-- footer -->
   </body>
 </html>
