--- a/marketpage.html
+++ b/marketpage.html
@@ -34,7 +34,7 @@
 
   <body>
     <!-- header -->
-    <div class="header-container">
+    <div class="container">
       <header class="header flex">
         <div class="header-logo">
           <a href="#" class="logo">Market</a>
@@ -75,10 +75,12 @@
           </div>
         </div>
       </header>
+
+      <!-- main -->
+      <div class="main"></div>
+
+      <!-- footer -->
+      <footer class="footer"></footer>
     </div>
-
-    <!-- main -->
-
-    <!-- footer -->
   </body>
 </html>
