--- a/hair_page/hairpage.html
+++ b/hair_page/hairpage.html
@@ -98,6 +98,9 @@
             <button class="search_icon">
               <i class="fa-solid fa-magnifying-glass"></i>
             </button>
+            <button class="menu_icon">
+              <i class="fa-solid fa-bars"></i>
+            </button>
           </div>
         </div>
       </header>
@@ -137,66 +140,73 @@
         <section class="hair-items">
           <div class="products-list">
             <h3>Shampoo Bar</h3>
-            <ul class="shampoo flex">
-              <li>
-                <a href="#">
-                  <dl>
-                    <dt class="item_img">
-                      <img src="../img/soap_baobab.jpg" alt="바오밥 샴푸바" />
-                    </dt>
-                    <dd class="item-data">
-                      <p>바오밥 샴푸바</p>
-                      <span>10,000원</span>
-                    </dd>
-                  </dl>
-                </a>
-              </li>
+            <div class="shampoo-bar flex">
+              <ul class="shampoo_1 flex">
+                <li>
+                  <a href="#">
+                    <dl>
+                      <dt class="item_img">
+                        <img src="../img/soap_baobab.jpg" alt="바오밥 샴푸바" />
+                      </dt>
+                      <dd class="item-data">
+                        <p>바오밥 샴푸바</p>
+                        <span>10,000원</span>
+                      </dd>
+                    </dl>
+                  </a>
+                </li>
 
-              <li>
-                <a href="#">
-                  <dl>
-                    <dt class="item_img">
-                      <img
-                        src="../img/soap_blackbean.jpg"
-                        alt="검은콩 샴푸바"
-                      />
-                    </dt>
-                    <dd class="item-data">
-                      <p>검은콩 샴푸바</p>
-                      <span>10,000원</span>
-                    </dd>
-                  </dl>
-                </a>
-              </li>
+                <li>
+                  <a href="#">
+                    <dl>
+                      <dt class="item_img">
+                        <img
+                          src="../img/soap_blackbean.jpg"
+                          alt="검은콩 샴푸바"
+                        />
+                      </dt>
+                      <dd class="item-data">
+                        <p>검은콩 샴푸바</p>
+                        <span>10,000원</span>
+                      </dd>
+                    </dl>
+                  </a>
+                </li>
+              </ul>
 
-              <li>
-                <a href="#">
-                  <dl>
-                    <dt class="item_img">
-                      <img src="../img/soap_kelp.jpg" alt="다시마 샴푸바" />
-                    </dt>
-                    <dd class="item-data">
-                      <p>다시마 샴푸바</p>
-                      <span>10,000원</span>
-                    </dd>
-                  </dl>
-                </a>
-              </li>
+              <ul class="shampoo_2 flex">
+                <li>
+                  <a href="#">
+                    <dl>
+                      <dt class="item_img">
+                        <img src="../img/soap_kelp.jpg" alt="다시마 샴푸바" />
+                      </dt>
+                      <dd class="item-data">
+                        <p>다시마 샴푸바</p>
+                        <span>10,000원</span>
+                      </dd>
+                    </dl>
+                  </a>
+                </li>
 
-              <li>
-                <a href="#">
-                  <dl>
-                    <dt class="item_img">
-                      <img src="../img/soap_blue.jpg" alt="블루비오틴 샴푸바" />
-                    </dt>
-                    <dd class="item-data">
-                      <p>블루비오틴 샴푸바</p>
-                      <span>13,000원</span>
-                    </dd>
-                  </dl>
-                </a>
-              </li>
-            </ul>
+                <li>
+                  <a href="#">
+                    <dl>
+                      <dt class="item_img">
+                        <img
+                          src="../img/soap_blue.jpg"
+                          alt="블루비오틴 샴푸바"
+                        />
+                      </dt>
+                      <dd class="item-data">
+                        <p>블루비오틴 샴푸바</p>
+                        <span>13,000원</span>
+                      </dd>
+                    </dl>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
 
           <div class="products-list">
