--- a/hair_page/hairpage.html
+++ b/hair_page/hairpage.html
@@ -262,14 +262,24 @@
       </div>
 
       <!-- footer -->
-      <footer class="footer">
-        <div class="brand-info">
-          <a href="#">회사소개</a>
-          <a href="#">이용약관</a>
-          <a href="#">개인정보·처리방침</a>
+      <footer class="footer flex">
+        <div>
+          <div class="brand-info">
+            <a href="#">회사소개</a>
+            <a href="#">이용약관</a>
+            <a href="#">개인정보·처리방침</a>
+          </div>
+          <div class="line-copyright">© BlendSoap | All right reserved.</div>
         </div>
 
-        <div class="line-copyright">© BlendSoap | All right reserved.</div>
+        <div class="download">
+          <a href="#" class="app">
+            <i class="fa-brands fa-google-play"></i>
+          </a>
+          <a href="#" class="app">
+            <i class="fa-brands fa-apple"></i>
+          </a>
+        </div>
       </footer>
     </div>
   </body>
