--- a/hair_page/hairpage.html
+++ b/hair_page/hairpage.html
@@ -63,7 +63,7 @@
       <header class="header flex">
         <div class="user-info flex">
           <div class="sign_in">
-            <a href="#">로그인</a>
+            <a href="../signin_page/signin.html">로그인</a>
           </div>
           <div class="sign_up">
             <a href="../signup_page/signup.html">회원가입</a>
@@ -272,7 +272,7 @@
           <div class="line-copyright">© BlendSoap | All right reserved.</div>
         </div>
 
-        <div class="download">
+        <div class="download flex">
           <a href="#" class="app">
             <i class="fa-brands fa-google-play"></i>
           </a>
